Minor navbar spacing fix

--- a/components/Nav/navlink.module.css
+++ b/components/Nav/navlink.module.css
@@ -74,7 +74,7 @@
   }
 
   .nav__list {
-    padding: 0 var(--mb-1-5);
+    padding: 0 var(--mb-1);
     flex-direction: row;
     column-gap: 2rem;
   }
